<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detalji"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detalji_filmova"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detalji_slika"
            android:layout_width="150dp"
            android:layout_height="250dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detalji_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="TITLE"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/detalji_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:text="year"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/detalji_rating"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

            <!--            <RatingBar-->
            <!--                android:id="@+id/detalji_rating"-->
            <!--                style="@style/Widget.AppCompat.RatingBar.Small"-->

            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="5dp"-->
            <!--                android:numStars="10" />-->

            <TextView
                android:id="@+id/detalji_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                tools:text="Runtime"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalji_genre"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/detalji_genre"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                tools:text="Genre"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalji_writen_by"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/detalji_writer"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                tools:text="Writer"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalji_directed_by"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/detalji_director"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                tools:text="Director"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalji_actors"/>

    <TextView
        android:id="@+id/detalji_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="5dp"
        tools:text="Actors"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalji_plot"/>

    <TextView
        android:id="@+id/detalji_plot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="5dp"
        tools:text="Plot"
        android:layout_marginLeft="5dp" />

</LinearLayout>